docs: add swagger comment for CreateDocument API
The request and response structs are necessary for Swagger to recognize
the JSON structure. We need them to annotate in the Swagger comment.
This also affects the API implementation; however, I believe making the
request and response structs explicit has only advantages.
